<resources>
    <string name="app_name">Fake Neaease Music</string>
    <string name="suggest_list">推荐歌单</string>
    <string name="headset">headset</string>
    <string name="list_1_play_number">241万</string>
    <string name="list_1_title">华语速爆新歌</string>
    <string name="list_2_play_number">85万</string>
    <string name="list_2_title">24小时听歌度日计划</string>
    <string name="list_3_title">2:00/--:--</string>
    <string name="play_all_in_list">播放全部</string>
    <string name="multi_choice">多选</string>
    <string name="the_1th_song_name">青春住了谁</string>
    <string name="the_1th_song_singer">杨丞琳</string>
    <string name="the_1th_song_belong_album">青春住了谁专辑</string>
    <string name="other_options">其他操作</string>
    <string name="album_song_list_label">歌单列表</string>
    <string name="playing_song_label">正在播放</string>
    <string name="song_in_album_order">1</string>
    <string name="album_creator">原点</string>
    <string name="example_album_title">【节奏控】那些超带感的音乐（典藏版）</string>
    <string name="song_start_time">00:00</string>
    <string name="song_end_time">03:50</string>
    <string name="sq_song_quality">SQ</string>
    <string name="separator_singer_album">-</string>
    <string name="example_album_played_num">300万</string>
    <string name="text_album_title">hhhhhhh</string>
    <string name="album_json_key">albums</string>
    <string name="songs_json_key">songs</string>
    <string name="album_name_json_key">album_name</string>
    <string name="song_title_json_key">song_title</string>
    <string name="singer_json_key">singer</string>
    <string name="song_quality_json_key">song_quality</string>
    <string name="album_title_json_key">album_title</string>
    <string name="album_creator_json_key">creator</string>
    <string name="album_played_num_json_key">played_num</string>
</resources>
