<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/song_in_album_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_a_song_record"
            android:layout_marginTop="@dimen/margin_top_a_song_record">

            <TextView
                android:id="@+id/song_order_of_album"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin_start_song_order"
                android:gravity="center_vertical"
                android:text="@string/song_in_album_order"
                android:textSize="@dimen/text_size_song_order" />

            <ImageView
                android:layout_width="@dimen/width_icon_song_record"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:src="@drawable/ic_more_vert_black_48dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_start_song_detail">

                <TextView
                    android:id="@+id/song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_1th_song_name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/margin_bottom_song_detail"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sound_quality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sq_song_quality"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="@dimen/text_size_song_quality" />

                    <TextView
                        android:id="@+id/singer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start_song_record_detail"
                        android:text="@string/the_1th_song_singer"
                        android:textSize="@dimen/text_size_song_quality" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_end_song_record_detail"
                        android:layout_marginStart="@dimen/margin_start_song_record_detail"
                        android:text="@string/separator_singer_album"
                        android:textSize="@dimen/text_size_song_quality" />

                    <TextView
                        android:id="@+id/album_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_1th_song_belong_album"
                        android:textSize="@dimen/text_size_song_quality" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>