<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.fakeneaeasemusic.MainActivity">


    <RelativeLayout
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ic_play_circle_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_play_circle_outline_black_48dp"/>
        <TextView
            android:layout_toRightOf="@id/ic_play_circle_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_all_in_list"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_choice"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/music_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/list_title"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/the_1th_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/song_order_in_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/song_order_in_album">
                <TextView
                    android:id="@+id/the_1th_song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_1th_song_name"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/the_1th_song_name"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SQ"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="10sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/the_1th_song_singer"
                        android:textSize="10sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:text="-"
                        android:textSize="10sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_1th_song_belong_album"
                        android:textSize="10sp" />
                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:text="@string/multi_choice"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
