<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/album_cover"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:contentDescription="album cover description"
                android:scaleType="centerCrop"
                android:src="@drawable/a0" />

            <TextView
                android:id="@+id/album_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/album_cover"
                android:text="【节奏控】那些超带感的音乐（典藏版）" />

            <TextView
                android:id="@+id/album_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/album_title"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/album_cover"
                android:text="原点" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/ic_play_all_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_play_circle_outline_black_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/ic_play_all_icon"
                android:text="@string/play_all_in_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true"
                android:text="@string/multi_choice" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/music_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/list_title"
            android:orientation="vertical" >

            <!--专辑歌曲列表-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_alignParentEnd="true"
                    android:text="@string/other_options" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="45dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_1th_song_name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_alignParentBottom="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="SQ"
                            android:textColor="@android:color/holo_red_light"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/the_1th_song_singer"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:layout_marginStart="4dp"
                            android:text="-"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/the_1th_song_belong_album"
                            android:textSize="10sp" />
                    </LinearLayout>

                </RelativeLayout>




            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</ScrollView>